--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,33 @@
+html {
+    background-color: rgba(122, 191, 191, 0.5);
+}
 body {
-    background-color: #7ABFBF;
+    background-color: #F2F2F2;
+}
+
+@media screen and (min-width: 500px) {
+    html {
+        margin: 0 auto;
+    }
+    body {
+        width: 350px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    html {
+        margin: 0 auto;
+    }
+    body {
+        width: 800px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    body {
+        width: 1400px;
+        margin: 0 auto;
+    }
 }
