--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,75 @@ html {
 body {
     background-color: #F2F2F2;
 }
+h1, h2, h3, h4 {
+    text-transform: uppercase;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+}
+h1 {
+    font-size: 40px;
+    margin: 0 auto;
+}
+h2 {
+    font-size:30px;
+}
+h3 {
+    font-size: 25px;
+    text-align: center;
+    margin: 0 auto;
+}
+header {
+    display: flex;
+    box-shadow: 0 10px 10px -2px rgba(101, 101, 101, 0.5);
+}
+header section {
+    display: flex;
+    order: 1;
+}
+p {
+    font-family: 'Montserrat', Arial, sans-serif;
+    padding: 10px;
+    font-weight: medium;
+    font-size: 16px;
+    margin: 0 auto;
+}
+dd, li, nav, input {
+    font-family: 'Montserrat', Arial, sans-serif;
+}
+ul {
+    margin: 10px;
+    padding-left: 20px;
+}
+ul li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    list-style-type: square;
+}
+figure figcaption {
+    font-size: 20px;
+}
+figure h3 {
+    font-size: 25px;
+    text-align: left;
+}
+aside {
+    padding: 10px;
+}
+aside h2 {
+    margin: 0 auto;
+    text-align: center;
+}
+ol li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.streetTacosNav {
+    background-color: #F2F2F2;
+    display: flex;
+    order: -1;
+}
+header {
+    background-color: white;
+}
 
 @media screen and (min-width: 500px) {
     html {
@@ -12,6 +81,72 @@ body {
     body {
         width: 350px;
         margin: 0 auto;
+    }
+    h1 {
+        text-align: center;
+    }
+    nav ul li a {
+        text-decoration: none;
+        color: #EB5428;
+        font-size: 20px;
+    }
+    nav ul li {
+        list-style-type: none;
+        display: inline-block;
+        text-align: center;
+        text-transform: uppercase;
+        font-family: 'Bebas Neue', Arial, sans-serif;
+        padding-left: 8px;
+        padding-right: 8px;
+        margin: 0 auto;
+    }
+    nav ul li a, nav ul li img {
+        display: flex;
+    }
+    .streetTacosNav {
+        order: 2;
+    }
+    .main-navigation {
+        display: flex;
+        order: -1;
+        padding: 0px;
+    }
+    ul#social li {
+        font-size: 20px;
+    }
+    body img {
+        width: 100%;
+    }
+    dl {
+        padding: 10px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 100px 1fr;
+    }
+    dt {
+        font-family: 'Montserrat', Arial, sans-serif;
+        font-weight: bold;
+    }
+    dd {
+        text-align: left;
+        margin-left: 0px;
+        padding: 0px;
+        display: inline-flex;
+    }
+    header {
+        display: flex;
+        order: -1;
+    }
+    header nav h2 {
+        display: none;
+    }
+    #search {
+        display: flex;
+        height: 50px;
+    }
+    aside {
+        display: inline-block;
+        order: 2;
     }
 }
 
