--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ h3 {
 }
 header {
     display: flex;
-    box-shadow: 0 10px 10px -2px rgba(101, 101, 101, 0.5);
+    box-shadow: 0px 5px 2px rgba(148, 148, 148, 0.5);
 }
 header section {
     display: flex;
@@ -38,11 +38,11 @@ p {
 dd, li, nav, input {
     font-family: 'Montserrat', Arial, sans-serif;
 }
-ul {
+menu {
     margin: 10px;
     padding-left: 20px;
 }
-ul li {
+menu li {
     padding-top: 5px;
     padding-bottom: 5px;
     list-style-type: square;
@@ -65,14 +65,6 @@ ol li {
     padding-top: 5px;
     padding-bottom: 5px;
 }
-.streetTacosNav {
-    background-color: #F2F2F2;
-    order: -1;
-}
-header {
-    background-color: white;
-    padding: 5px;
-}
 
 @media screen and (min-width: 500px) {
     html {
@@ -81,45 +73,66 @@ header {
     body {
         width: 350px;
         margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
     }
     h1 {
         text-align: center;
     }
-    nav ul li a {
+
+    /* 'Street tacos' heading and 4 nav actions and svgs */
+    .streetTacosNav ul {
+        padding-left: 0px;
+        justify-content: space-evenly;
+    }
+    .streetTacosNav nav ul li a {
         text-decoration: none;
         color: #EB5428;
         font-size: 20px;
+        display: flex;
+        padding: 0px 10px;
     }
-    nav ul li {
+    .streetTacosNav nav ul li {
         list-style-type: none;
-        display: inline-block;
         text-align: center;
         text-transform: uppercase;
         font-family: 'Bebas Neue', Arial, sans-serif;
-        padding-left: 8px;
-        padding-right: 8px;
-        margin: 0 auto;
     }
-    nav ul li a, nav ul li img {
+    .streetTacosNav nav ul {
         display: flex;
     }
-    .streetTacosNav {
-        order: 2;
-    }
-    .menu {
+
+    /* Main Navigation */
+    menu {
         display: flex;
         order: -1;
         padding: 0px;
     }
-    ul#social li {
+    menu#social li {
         font-size: 20px;
     }
-    ul#menu {
-        padding-left: 0px;
-    }
+    
     body img {
         width: 100%;
     }
+    header {
+        display: flex;
+        order: -1;
+    }
+    header nav h2 {
+        display: none;
+    }
+    header {
+        background-color: white;
+        padding: 5px;
+        display: grid;
+        grid-template-columns: 50px 1fr 1fr;
+    }
+    header svg {
+        grid-column: 1 / 1;
+    }
+
+    /* Details */
     dl {
         padding: 10px;
         margin: 0 auto;
@@ -136,27 +149,47 @@ header {
         padding: 0px;
         display: inline-flex;
     }
-    header {
-        display: flex;
-        order: -1;
-    }
-    header nav h2 {
-        display: none;
-    }
-    header nav {
 
+    /* Aside */
+    aside {
+        display: flex;
+        order: 2;
+        flex-direction: column-reverse;
+    }
+
+    /* Search Bar and SVG */
+    section#search {
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top: 40px;
+        padding-bottom: 20px;
     }
     #search {
         display: flex;
-        margin-top: 10px;
-        height: 30px;
+        order: -1;
+        flex: 1;
     }
+
+    /*
+        align-items: center;
+        justify-content: center;
+        padding: 10px 0px;*/
+    /*
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+        order: -1;
+    */
+
     #search svg {
-        margin-top: 8px;
+        background-color: #EB5428;
+        padding: 0px 5px 1px 5px;
     }
-    aside {
-        display: inline-block;
-        order: 2;
+    input {
+        height: 35px;
+        border: 2px solid #EB5428;
+        flex: 1;
     }
 }
 
