--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,18 @@ header {
     display: flex;
     box-shadow: 0px 5px 2px rgba(148, 148, 148, 0.5);
 }
+menu {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+header label {
+    cursor: pointer;
+    display: inline-block;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
 p {
     font-family: 'Montserrat', Arial, sans-serif;
     padding: 10px;
@@ -52,6 +64,7 @@ figure h3 {
 }
 aside {
     padding: 10px;
+    background-color: #7ABFBF;
 }
 aside h2 {
     margin: 0 auto;
@@ -168,6 +181,16 @@ ol li {
     header input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
         top: 0;
     }
+    menu {
+        overflow: visible;
+        position: absolute;
+        top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+    header label span, header input {
+        display: none;
+    }
     /* Hamburger SVG */
     .menu-open-button {
         display: grid;
@@ -252,13 +275,6 @@ ol li {
         display: inline-flex;
     }
 
-    /* Aside */
-    aside {
-        display: flex;
-        order: 2;
-        flex-direction: column-reverse;
-    }
-
     /* Search Bar and SVG */
     section#search {
         padding-left: 40px;
@@ -279,6 +295,46 @@ ol li {
         height: 35px;
         border: 2px solid #EB5428;
         flex: 1;
+    }
+    /* Socials List*/
+    ul#social {
+        list-style-type: none;
+        padding-left: 10px;
+        padding-right: 10px;
+        display: flex;
+        align-self: center;
+        justify-content: space-between;
+        flex-grow: 1;
+    }
+    ul#social li {
+        display: block;
+        flex-direction: column;
+        align-content: center;
+    }
+    ul#social li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-family: 'Bebas Neue', Arial, sans-serif;
+        color: #EB5428;
+        display: block;
+        font-size: 20px;
+    }
+    ul#social li svg {
+
+    }
+    footer {
+        padding: 10px;
+        background-color: white;
+        text-align: center;
+        font-size: 20px;
+        font-family: 'Bebas Neue', Arial, sans-serif;
+        line-height: .75em;
+    }
+    footer h3 {
+        padding-top: 10px;
+    }
+    footer > svg {
+        display: none;
     }
 }
 
