--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,8 +80,35 @@ ol li {
     padding-bottom: 5px;
 }
 /* Star Rating */
-/*.star-rating {
+.rating {
+    display: block;
+  }
+.rating input [type=radio] + label {
+    background: url(https://upload.wikimedia.org/wikipedia/commons/f/f9/Five_Pointed_Star_Solid.svg);
+}
+.rating input:checked {
+    accent-color: #EB5428;
+}
+  
+/*.rating input {
+    position: absolute;
+    left: -100vw;
+}
+.rating label {
+    width: 48px;
+    height: 48px;
+    padding: 48px 0 0;
+    overflow: hidden;
+    background: url('stars.svg') no-repeat top left;
+}
+.star-rating:not(:hover) input:indeterminate + label,
+.star-rating:not(:hover) input:checked ~ input + label,
+.star-rating input:hover ~ input + label {
+  background-position : -48px 0;
+}
 
+.rating:not(:hover) input:focus-visible + label{
+  background-position : -96px 0;
 }*/
 
 @media screen and (min-width: 500px) {
@@ -310,8 +337,14 @@ ol li {
         margin-left: 10px;
         margin-bottom: 20px;
     }
+    aside figure:hover {
+        background-color: orange;
+        transition: all 0.5s ease-in-out;
+    }
     aside figure img {
         grid-row: 1 / 1;
+        width: 110px;
+        height: 110px;
     }
     aside figure h3 {
         grid-column: 2 / 2;
