--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,18 +132,22 @@ ol li {
 
     /* Main Navigation */
     menu {
-        padding: 0px;
+        padding-left: 0px;
         overflow: hidden;
         max-height: 0px;
         transition: max-height .2s ease-out;
-        overflow: scroll; /* added scroll feature for now so I can adjust styling of line items*/
+        position: absolute;
+        margin-top: 80px;
+        width: 414px;
+        background-color: white;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     menu li {
         list-style-type: none;
         text-align: center;
         text-transform: uppercase;
         font-family: 'Bebas Neue', Arial, sans-serif;
-        display: flex;
     }
     menu li:hover {
         background-color: #EB5428;
@@ -187,7 +191,6 @@ ol li {
     /* header menu - last list item and svg */
     .user-icon {
         float: right;
-        margin-top: -30px;
         position: relative;
     }
     .user-icon a {
@@ -197,10 +200,10 @@ ol li {
         text-decoration: none;
         font-size: 20px;
         display: block;
-        padding-bottom: 8px;
+        padding-bottom: 9px;
         padding-left: 5px;
         padding-right: 5px;
-        padding-top: 6px;
+        padding-top: 7px;
         margin-top: -2px;
         text-align: center;
     }
